2009-02-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/EditActions.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed
	  "Bug 472714 - MonoDevelop automatic indentation does not
	  follow "Convert tabs to spaces" option".

2009-02-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed
	  "Bug 469910 - Incorrect type resolution on attributes".

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Remove unnecessary
	  markup escaping.

2009-02-03  Mike Krüger  <mkrueger@novell.com>

	*
	  MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs:
	  Commented out some non functional code.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	*
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Flush.

	* Makefile.am:
	* MonoDevelop.SourceEditor.mdp: Fixed assembly references.

2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Set caret
	  position correctly after a completion insertion.

2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	*
	  MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs:
	  Remove proeprties that have been moved to text style
	  policies. Track SourceEditorOptions API changes.

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs: